Fix spacing for title

--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -1,6 +1,6 @@
 .form-container {
-    padding-top: 3vw;
-    padding-bottom: 2vw;
+    /* padding-top: 3vw; */
+    /* padding-bottom: 2vw; */
     border-bottom: solid black 1vw;
     width: 100vw;
     display: flex;
@@ -21,6 +21,8 @@ form {
 
 h1 {
     font-size: 10vw;
+    margin-left: 3vw;
+    margin-right: 3vw;
     text-shadow: .2vw .2vw .5vw rgba(255, 255, 255, 0.671);
 }
 
